--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<html>
 <!DOCTYPE html>
-    <head>
-        <title>Moj app</title>
-    </head>
-    <body>
-        This is my app !
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Neki kar sm se spomnu</h1>
+</body>
 </html>
